--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,6 +56,7 @@ body {
   display: inline-block;
   overflow: scroll;
   padding: 0 2px 0 2px;
+  word-wrap: break-word;
 }
 
 .line {
